Refactor DefaultLatexParser, LatexParserResult classes (#11158)
* Convert Citation class to record

* Add citation key to the Citation record

We need to represent the citations in a map of `Path` and  `Set<Citations>` to update each file individually.

* Remove fileList and nestedFiles list from LatexParserResult

`fileList` and `nestedFiles` are not used anywhere.

* Modified DefaultTexParser to parse file by file

* Adapt test classes

* Minor changes

* Fix MainArchitectureTest

* Update DefaultLatexParser.java

* Normalize Path to avoid duplications

* Add CitationFinder class

* new CitationFinder instance if the directory changed

* Update parse method to return Optional

* Fix refresh button

* Fix refresh button